--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 /* nhurt */
 
 body{
-	background-color: #333;
-	font-family: Arial, Verdana, sans-serif;
+	background-color: #444;
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	background-image: url('images/subtle_zebra_3d.png');
+	background-repeat: repeat-x repeat-y;
 }
 
 #wrapper{
@@ -13,32 +16,43 @@ body{
 	margin-bottom: 20px;
 	height: 600px;
 	padding: 20px;
-	box-shadow: 7px 7px 8px #222;
+		
+	box-shadow: 7px 7px 8px #ccc;
+  /*
   -webkit-box-shadow: 7px 7px 8px #222;
   -moz-box-shadow: 7px 7px 8px #222;
+  */
 }
 
 #header {
 	display: inline-block;
 	height: 100px;
-	background: transparent url('images/nicolas_hurt.png') no-repeat top left;
+	/*background: transparent url('images/nicolas_hurt.png') no-repeat top left;*/
 	width: 800px;
 }
 
 #header h1{
-	text-indent: -1000em;
+  /*
+	text-indent: -1000em;*/
+	margin-top: 0;
+	font-size: 72px;
+	font-weight: 300;
+}
+
+h2 {
+  font-weight: normal;
 }
 
 #menu 
 {
-	background-color: #666;
-    text-align: center;
-	height: 60px;
+	background-color: #E6FFE9;
+	text-align: center;
+	height: 40px;
 	margin: 0 0 10px 0;
 	padding: 0;
-	box-shadow: 2px 2px 2px #111;
-	-webkit-box-shadow: 2px 2px 2px #111;
-	-moz-box-shadow: 2px 2px 2px #111;
+	box-shadow: 2px 2px 2px #95B897;
+	-webkit-box-shadow: 2px 2px 2px #95B897;
+	-moz-box-shadow: 2px 2px 2px #95B897;
 }
 
 #menu ul {
@@ -54,24 +68,23 @@ body{
 
 #menu a {
 	display: block;
-	color: white;
+	color: black;
 	width: 135px;
-	height: 60px;
-	line-height: 60px;
+	height: 40px;
+	line-height: 40px;
 	text-decoration: none;
 	text-align: center;
 	vertical-align: middle;
-	font-weight: bold;
+	font-weight: 400;
+	font-size: 17px;
 }
 
 #menu a.current_page{
-	background-color: #555;
-	color: white;
+	background-color: #C0EDC3;
 }
 
 #menu a:hover{
-	color: white;
-	background-color: black;
+  background-color: #B7CCB7;
 	text-decoration: none;
 }
 
@@ -79,7 +92,7 @@ img.about_me {
 	float: left;
 	width: 300px;
 	height: 400px;
-	margin: 0 10px 10px 0;
+	margin: 0 20px 10px 0;
 	overflow: hidden;
 }
 
