--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -89,11 +89,19 @@ h2 {
 }
 
 img.about_me {
+  position: relative;
 	float: left;
 	width: 300px;
 	height: 400px;
 	margin: 0 20px 10px 0;
 	overflow: hidden;
+	padding: 10px;
+  border: 1px solid #ddd;
+  box-shadow: 0 1px 5px rgba(0,0,0,.15);
+  
+	-webkit-transform: rotate(-1deg) translate(0, -2px);
+	-moz-transform: rotate(-1deg) translate(0, -2px);
+	-o-transform: rotate(-1deg) translate(0, -2px);
 }
 
 #content a{
