--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -138,7 +138,7 @@ img.about_me {
   text-align:justify;
 }
 
-canvas#game{
+canvas.game{
   margin-top: 25px;
   border: 1px solid #eee;
   box-shadow: 3px 3px 2px #ddd;
