--- a/new/stylesheets/style.css
+++ b/new/stylesheets/style.css
@@ -64,20 +64,21 @@ h1 a{
 	display: inline-block;
 }
 
-#menu embed{
+ {
+
+}
+
+#menu object{
   margin-left: 25px;
   margin-right: 25px;
   height: 75px;
   width: 75px;
+  cursor: pointer;
 }
 
 #menu li span {
   display: block;
   margin-top: 5px;
-}
-
-#menu path{
-  fill: green;
 }
 
 #viewbox {
