--- a/new/stylesheets/style.css
+++ b/new/stylesheets/style.css
@@ -35,8 +35,8 @@ body{
 #header {
 	height: 100px;
 	width: 800px;
-	margin: 0 auto;
-	font-family: 'Monoton', sans-serif;
+	margin: 20px auto;
+	font-family: 'Poiret One', sans-serif;
 	color: #c00000;
 	text-align: center;
 	margin-bottom: 10px;
