--- a/new/stylesheets/style.css
+++ b/new/stylesheets/style.css
@@ -83,10 +83,8 @@ h1 a{
 #menu a{
   text-decoration: none;
   color: #aaa;
-}
-
-#menu a span{
-  display: none;
+  height: 70px;
+  display: block;
 }
 
 #menu a:hover{
@@ -119,6 +117,7 @@ svg.menu_icon:hover {
   margin-top: 5px;
   font-family: 'Open Sans', sans-serif;
 }
+
 
 #viewbox {
   width: 576px;
