--- a/new/stylesheets/style.css
+++ b/new/stylesheets/style.css
@@ -56,9 +56,9 @@ h1 a{
 }
 
 #menu {
-  padding-top: 15px;
+  padding-top: 10px;
   text-align: center;
-  height: 110px;
+  height: 115px;
   
   background-color: #F4F4F4;
   box-shadow: 3px 3px 3px #ccc;
@@ -73,7 +73,7 @@ h1 a{
 	padding: 0;
 	list-style: none;
 	line-height: normal;
-	height: 90px;
+	height: 96px;
 }
 
 #menu li {
@@ -93,15 +93,23 @@ h1 a{
 }
 
 svg.menu_icon {
+  margin-top: 3px;
   margin-left: 27px;
   margin-right: 27px;
   height: 70px;
   width: 70px;
+  margin-bottom: 5px;
   fill: #888;
 }
 
 svg.menu_icon:hover {
   fill: #111;
+  width: 76px;
+  margin-top: 0;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 0;
+  height: 76px;
 }
 
 .current span{
