--- a/new/stylesheets/style.css
+++ b/new/stylesheets/style.css
@@ -90,6 +90,7 @@ h1 a{
 #menu a:hover{
   /*text-decoration: underline;*/
   color: #000;
+  cursor: pointer;
 }
 
 svg.menu_icon {
@@ -110,6 +111,7 @@ svg.menu_icon:hover {
   margin-right: 24px;
   margin-bottom: 0;
   height: 76px;
+  cursor: pointer;
 }
 
 .current span{
