--- a/new/stylesheets/style.css
+++ b/new/stylesheets/style.css
@@ -176,3 +176,28 @@ svg.menu_icon:hover {
 .description svg, .description g, .description path{
   fill: #aaa;
 }
+
+#footer {
+  font-family: 'Open Sans', sans-serif;
+  margin-top: 40px;
+  padding-top: 30px;
+  color: #aaa;
+  border-top: 2px solid #ccc;
+  text-align: center;
+}
+
+#footer img {
+  margin-right: 5px;
+  margin-left: 5px;
+  opacity : 0.5;
+  filter: alpha(opacity=50); 
+}
+
+#footer img:hover {
+  opacity : 1;
+  filter: alpha(opacity=100);
+}
+
+#footer a{
+  text-decoration: none;
+}
