--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -60,6 +60,8 @@ h1 a{
   text-align: center;
   height: 115px;
   
+  min-width: 800px;
+  
   background-color: #F4F4F4;
   box-shadow: 3px 3px 3px #ccc;
   -webkit-box-shadow: 3px 3px 3px #ccc;
@@ -74,6 +76,7 @@ h1 a{
 	list-style: none;
 	line-height: normal;
 	height: 96px;
+  min-width: 800px;
 }
 
 #menu li {
