--- a/steeltown/css/style.css
+++ b/steeltown/css/style.css
@@ -70,7 +70,7 @@ a:hover {
 }
 
 #content {
-    width: 700px;
+    width: 674px;
     height: 374px;
     margin: 0 auto;
     text-shadow: 1px 1px 15px black;
@@ -151,6 +151,7 @@ a:hover {
 .crew img {
     position: absolute;
     left: 0;
+    top: 5px;
     margin-right: 10px;
 }
 
