--- a/steeltown/css/style.css
+++ b/steeltown/css/style.css
@@ -3,6 +3,18 @@ html, body {
     margin: 0;
 }
 
+@font-face {
+    font-family: 'moonshinersharp';
+    src: url('moonshiner-sharp-webfont.eot');
+    src: url('moonshiner-sharp-webfont.eot?#iefix') format('embedded-opentype'),
+         url('moonshiner-sharp-webfont.woff') format('woff'),
+         url('moonshiner-sharp-webfont.ttf') format('truetype'),
+         url('moonshiner-sharp-webfont.svg#moonshinersharp') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body {
     background: black url('../img/home.jpg') no-repeat center top;
     background-size: 1200px 515px;
@@ -29,12 +41,20 @@ h1 {
 #title span {
     text-shadow: 1px 1px 10px black;
     font-size: 1.5em;
+    font-family: 'moonshinersharp', sans-serif;
 }
 
 #nav {
     text-align: center;
     margin-top: 165px;
     font-family: 'Pathway Gothic One', sans-serif;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    top: 570px;
+    margin-top: 0px;
 }
 
 #nav a {
@@ -63,10 +83,14 @@ a:hover {
     margin-top: 15px;
 }
 
+#links a{
+    padding: 0;
+}
+
 #links img{
     height: 20px;
     margin: 0 5px;
-    
+    padding: 0;
 }
 
 #content {
@@ -101,10 +125,6 @@ a:hover {
 
 #content p {
     font-size: 16px;
-}
-
-#nav.lower {
-    margin-top: 20px;
 }
 
 .smaller h1{
